--- a/app/src/main/res/layout/fragment_load_contacts_data.xml
+++ b/app/src/main/res/layout/fragment_load_contacts_data.xml
@@ -12,39 +12,69 @@
         style="@style/Base.Widget.AppCompat.ActionBar.Solid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Load Contacts"
-        android:textColor="@color/colorAccent"
+        android:text="@string/load_contacts"
+        android:textAllCaps="false"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="57dp"
         app:layout_constraintTop_toBottomOf="@+id/operator_spinner"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toRightOf="@+id/textView2"
+        android:layout_marginLeft="16dp" />
 
     <Spinner
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/operator_spinner"
+
         tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="176dp"
         tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/loadData"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView"
-        android:layout_marginLeft="33dp" />
+        android:layout_width="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp" />
 
     <TextView
-        android:text="Operator"
+        android:text="@string/select_operator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
-        android:layout_marginStart="27dp"
+        android:textColor="@color/white"
+        android:layout_marginStart="21dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/operator_spinner"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="27dp" />
+        android:layout_marginLeft="21dp" />
+
+    <TextView
+        android:text="@string/press_button_load_contacts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textColor="@color/white"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/loadData"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
+
+    <TextView
+        android:text="@string/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/seeting_text"
+        android:id="@+id/textView3"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp" />
 
 
 </android.support.constraint.ConstraintLayout>
