--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -4,5 +4,6 @@
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
 
-    <dimen name="seeting_text">64dp</dimen>
+    <dimen name="seeting_text">64sp</dimen>
+    <dimen name="text_instruction">32sp</dimen>
 </resources>
