--- a/app/src/main/res/layout/fragment_load_contacts_data.xml
+++ b/app/src/main/res/layout/fragment_load_contacts_data.xml
@@ -6,75 +6,98 @@
     android:background="@color/colorPrimary"
     tools:context="com.iyad.sultan.callme.LoadContactsData">
 
-
-    <Button
-        android:id="@+id/loadData"
-        style="@style/Base.Widget.AppCompat.ActionBar.Solid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/load_contacts"
-        android:textAllCaps="false"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="57dp"
-        app:layout_constraintTop_toBottomOf="@+id/operator_spinner"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/textView2"
-        android:layout_marginLeft="16dp" />
-
-    <Spinner
-        android:layout_height="wrap_content"
-        android:id="@+id/operator_spinner"
-
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="176dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/loadData"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp" />
-
     <TextView
-        android:text="@string/select_operator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:textColor="@color/white"
-        android:layout_marginStart="21dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/operator_spinner"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="21dp" />
-
-    <TextView
-        android:text="@string/press_button_load_contacts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:textColor="@color/white"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/loadData"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
-
-    <TextView
-        android:text="@string/settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/seeting_text"
         android:id="@+id/textView3"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+android:textColor="@color/white"
+        android:text="@string/settings"
+        android:textSize="@dimen/seeting_text"
+        android:textStyle="bold"
+
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="45dp"
+        tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:id="@+id/linearLayout2"
+        android:padding="5dp"
+        android:gravity="left|center|start"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp" />
+        android:layout_marginTop="81dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="80dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView3"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/select_operator"
+            android:textColor="@color/white"
+            android:layout_margin="5dp" />
+
+        <Spinner
+            android:id="@+id/operator_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_margin="5dp" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:id="@+id/linearLayout"
+        android:padding="5dp"
+        android:gravity="left|center|start"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="225dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/press_button_load_contacts"
+            android:textColor="@color/white"
+            android:layout_margin="5dp" />
+
+        <Button
+            android:id="@+id/loadData"
+            style="@style/Base.Widget.AppCompat.ActionBar.Solid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/load_contacts"
+            android:textAllCaps="false"
+            android:layout_margin="5dp" />
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
