Subtitle String file and change  Ui row_item 3

--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -69,6 +69,7 @@ android:background="@drawable/circle_shape_img"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             android:clickable="true"
+            android:src="@drawable/ic_local_phone_white_24dp"
            />
     </RelativeLayout>
 
