Update person Image

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,13 @@
+<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+
+
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
     android:id="@+id/container">
 
    <android.support.design.widget.AppBarLayout
@@ -33,4 +39,10 @@
 
 
    </android.support.design.widget.CoordinatorLayout>
+   <Button
 
+       android:id="@+id/send_button"
+       android:layout_height="132dp"
+       android:layout_width="match_parent"
+       android:text="Send (0)"/>
+</LinearLayout>
