--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
-<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
+<LinearLayout android:layout_height="match_parent"
+    android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
@@ -39,10 +41,5 @@
 
 
    </android.support.design.widget.CoordinatorLayout>
-   <Button
 
-       android:id="@+id/send_button"
-       android:layout_height="132dp"
-       android:layout_width="match_parent"
-       android:text="Send (0)"/>
 </LinearLayout>
