--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -24,7 +24,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/circle_shape_img"
-            android:src="@drawable/ic_person_white_24dp" />
+            card_view:srcCompat="@drawable/ic_person_black_24px"
+            android:contentDescription="@string/image_des" />
 
 
         <LinearLayout
@@ -58,6 +59,7 @@
         </LinearLayout>
 
         <ImageView
+            android:contentDescription="@string/image_des"
             android:id="@+id/icon_imageview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,7 +70,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             android:clickable="true"
-            android:src="@drawable/ic_local_phone_white_24dp" />
+            card_view:srcCompat="@drawable/ic_local_phone_black_36px" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
